[package]
name = "mcpacker"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "string"] }
ferinth = { git = "https://github.com/the-pink-hacker/ferinth.git", rev = "9d00095df766712d5978b14614aa37edbbcaf048" }
indexmap = { version = "2.2.6", features = ["serde"] }
notify = "6.1.1"
path-clean = "1.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.8.1"
shellexpand = { version = "3.1.0", features = ["path"] }
symlink = "0.1.0"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"
topological-sort = "0.2.2"
walkdir = "2.5.0"
zip = "2.1.1"
